[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/game/source/2/controlRoom/shannonRiddle.gd" type="Script" id=1]
[ext_resource path="res://assets/game/white.jpg" type="Texture" id=2]
[ext_resource path="res://themes/text30.tres" type="Theme" id=3]
[ext_resource path="res://scenes/game/riddleOverlay.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="computer_bg" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 2 )
modulate = Color( 0.27451, 0.411765, 0.6, 1 )
expand = true
stretch_mode = 0

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="ligne1" type="HBoxContainer" parent="Control"]

editor/display_folded = true
rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 600.0
margin/right = 1500.0
margin/bottom = 700.0
alignment = 0

[node name="toucheA" type="Button" parent="Control/ligne1" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "A"
flat = false

[node name="toucheZ" type="Button" parent="Control/ligne1" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 104.0
margin/top = 0.0
margin/right = 204.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Z"
flat = false

[node name="toucheE" type="Button" parent="Control/ligne1" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 208.0
margin/top = 0.0
margin/right = 308.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "E"
flat = false

[node name="toucheR" type="Button" parent="Control/ligne1" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 312.0
margin/top = 0.0
margin/right = 412.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "R"
flat = false

[node name="toucheT" type="Button" parent="Control/ligne1" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 0.0
margin/right = 516.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "T"
flat = false

[node name="toucheY" type="Button" parent="Control/ligne1" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 520.0
margin/top = 0.0
margin/right = 620.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Y"
flat = false

[node name="toucheU" type="Button" parent="Control/ligne1" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 624.0
margin/top = 0.0
margin/right = 724.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "U"
flat = false

[node name="toucheI" type="Button" parent="Control/ligne1" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 728.0
margin/top = 0.0
margin/right = 828.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "I"
flat = false

[node name="toucheO" type="Button" parent="Control/ligne1" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 832.0
margin/top = 0.0
margin/right = 932.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "O"
flat = false

[node name="toucheP" type="Button" parent="Control/ligne1" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 936.0
margin/top = 0.0
margin/right = 1036.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "P"
flat = false

[node name="ligne2" type="HBoxContainer" parent="Control"]

editor/display_folded = true
rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 700.0
margin/right = 1536.0
margin/bottom = 800.0
alignment = 0

[node name="toucheQ" type="Button" parent="Control/ligne2" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Q"
flat = false

[node name="toucheS" type="Button" parent="Control/ligne2" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 104.0
margin/top = 0.0
margin/right = 204.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "S"
flat = false

[node name="toucheD" type="Button" parent="Control/ligne2" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 208.0
margin/top = 0.0
margin/right = 308.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "D"
flat = false

[node name="toucheF" type="Button" parent="Control/ligne2" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 312.0
margin/top = 0.0
margin/right = 412.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "F"
flat = false

[node name="toucheG" type="Button" parent="Control/ligne2" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 0.0
margin/right = 516.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "G"
flat = false

[node name="toucheH" type="Button" parent="Control/ligne2" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 520.0
margin/top = 0.0
margin/right = 620.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "H"
flat = false

[node name="toucheJ" type="Button" parent="Control/ligne2" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 624.0
margin/top = 0.0
margin/right = 724.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "J"
flat = false

[node name="toucheK" type="Button" parent="Control/ligne2" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 728.0
margin/top = 0.0
margin/right = 828.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "K"
flat = false

[node name="toucheL" type="Button" parent="Control/ligne2" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 832.0
margin/top = 0.0
margin/right = 932.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "L"
flat = false

[node name="toucheM" type="Button" parent="Control/ligne2" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 936.0
margin/top = 0.0
margin/right = 1036.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "M"
flat = false

[node name="ligne3" type="HBoxContainer" parent="Control"]

editor/display_folded = true
rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 800.0
margin/right = 1536.0
margin/bottom = 900.0
alignment = 0

[node name="toucheW" type="Button" parent="Control/ligne3" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "W"
flat = false

[node name="toucheX" type="Button" parent="Control/ligne3" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 104.0
margin/top = 0.0
margin/right = 204.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "X"
flat = false

[node name="toucheC" type="Button" parent="Control/ligne3" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 208.0
margin/top = 0.0
margin/right = 308.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "C"
flat = false

[node name="toucheV" type="Button" parent="Control/ligne3" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 312.0
margin/top = 0.0
margin/right = 412.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "V"
flat = false

[node name="toucheB" type="Button" parent="Control/ligne3" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 0.0
margin/right = 516.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "B"
flat = false

[node name="toucheN" type="Button" parent="Control/ligne3" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 520.0
margin/top = 0.0
margin/right = 620.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "N"
flat = false

[node name="touchePoint" type="Button" parent="Control/ligne3" groups=[
"alphabet",
]]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 624.0
margin/top = 0.0
margin/right = 724.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "."
flat = false

[node name="toucheEspace" type="Button" parent="Control/ligne3" groups=[
"alphabet",
]]

rect/min_size = Vector2( 310, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 728.0
margin/top = 0.0
margin/right = 1038.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = " "
flat = false

[node name="Panel" type="Panel" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 250.0
margin/top = 370.0
margin/right = 1750.0
margin/bottom = 570.0

[node name="phrase" type="Label" parent="Control/Panel"]

rect/min_size = Vector2( 1490, 190 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 5.0
margin/right = 1495.0
margin/bottom = 195.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Label" parent="Control"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 250.0
margin/top = 270.0
margin/right = 350.0
margin/bottom = 370.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="instructions" type="Label" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 250.0
margin/top = 170.0
margin/right = 1750.0
margin/bottom = 270.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="riddleOverlay" parent="." instance=ExtResource( 4 )]


